--- a/style.css
+++ b/style.css
@@ -95,7 +95,12 @@ form > table > tbody > tr > td > table:nth-child(3) td > font > a font {
     content: "Logout"; }
 
 form > table table:last-child > tbody > tr > td:last-child > table:last-child {
-  margin-top: 10px; }
+  margin: 10px 0; }
+
+form > table table:last-child > tbody > tr > td:last-child > table:last-child > tbody > tr:last-child b,
+form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td:last-child b {
+  font-size: 12px;
+  color: #647483; }
 
 form > table,
 form > table > tbody > tr > td > table {
@@ -104,7 +109,7 @@ form > table > tbody > tr > td > table {
 form > table > tbody > tr > td > table:first-of-type {
   background: #199DDC;
   padding: 10px 15px;
-  width: 100vw !important;
+  width: 100% !important;
   color: #fff; }
   form > table > tbody > tr > td > table:first-of-type tr:nth-child(1) td,
   form > table > tbody > tr > td > table:first-of-type tr:nth-child(2) td {
@@ -122,11 +127,11 @@ form > table > tbody > tr > td > table:first-of-type {
 form > table > tbody > tr > td > table:nth-child(0n + 3) {
   background: #fff;
   padding: 10px 15px;
-  width: 100vw !important;
+  width: 100% !important;
   box-shadow: 0 2px 2px 0px rgba(0, 0, 0, 0.15); }
 
 form > table > tbody > tr > td > table:nth-child(0n + 4) {
-  width: 100vw !important;
+  width: 100% !important;
   height: calc(100vh - 105px); }
   form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td {
     display: none; }
@@ -156,41 +161,52 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
             color: #EFF3F6; }
     form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child {
       padding: 10px 10px 0; }
-      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:last-child > tbody > tr > td {
+      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td {
         padding: 5px;
         border-top: 1px solid #DCE1E5; }
-        form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:last-child > tbody > tr > td:first-child div {
+        form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td:nth-child(0n + 3) {
+          color: #708293; }
+          form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td:nth-child(0n + 3) input {
+            background: #EFF3F6;
+            width: 30px; }
+        form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td:first-child div {
           font-weight: 600;
-          color: #647483;
-          position: relative; }
-          form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:last-child > tbody > tr > td:first-child div:hover {
-            text-decoration: underline;
-            cursor: pointer; }
-            form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:last-child > tbody > tr > td:first-child div:hover::after {
-              opacity: 1;
-              transition: opacity 200ms linear; }
-          form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:last-child > tbody > tr > td:first-child div::after {
-            display: block;
-            content: "View project details";
-            text-align: center;
-            position: absolute;
-            left: 50%;
-            width: 130px;
-            transform: translateX(-50%);
-            top: -2em;
-            background: rgba(49, 57, 66, 0.85);
-            padding: 5px 10px;
-            color: #fff;
-            font-weight: 400;
-            border-radius: 2px;
-            opacity: 0;
-            transition: opacity 200ms linear;
-            pointer-events: none; }
-      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:last-child > tbody > tr:first-child td, form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:last-child > tbody > tr:nth-child(0n + 2) td {
+          color: #647483; }
+      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr:first-child td, form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr:nth-child(0n + 2) td {
         padding: 0;
         border-top: 0; }
-      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:last-child > tbody > tr:nth-child(0n + 2) td {
+      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr:nth-child(0n + 2) td {
         padding-bottom: 5px; }
+
+.wbs-link {
+  color: #DCE1E5;
+  margin: 0 5px;
+  position: relative; }
+  .wbs-link:hover {
+    color: #647483;
+    cursor: pointer;
+    text-decoration: none;
+    border-bottom: none; }
+    .wbs-link:hover::after {
+      opacity: 1;
+      transition: opacity 200ms linear; }
+  .wbs-link::after {
+    content: attr(data-tooltip-text);
+    display: block;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    width: 150px;
+    transform: translateX(-50%);
+    top: -2em;
+    background: rgba(49, 57, 66, 0.85);
+    padding: 5px 10px;
+    color: #fff;
+    font-weight: 400;
+    border-radius: 2px;
+    opacity: 0;
+    transition: opacity 200ms linear;
+    pointer-events: none; }
 
 .menu-link.link-icon-history::before {
   content: "";
@@ -199,6 +215,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -211,6 +228,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -223,6 +241,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -235,6 +254,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -247,6 +267,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -259,6 +280,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -271,6 +293,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -283,6 +306,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -295,6 +319,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -307,6 +332,7 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
   left: 1em;
   color: #708293;
   font: normal normal normal 14px/1 FontAwesome;
+  font-family: "FontAwesome";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
