--- a/style.scss
+++ b/style.scss
@@ -171,7 +171,13 @@ form > table > tbody > tr > td > table:nth-child(3) td {
 }
 
 form > table table:last-child > tbody > tr > td:last-child > table:last-child {
-    margin-top: 10px;
+    margin: 10px 0;
+}
+
+form > table table:last-child > tbody > tr > td:last-child > table:last-child > tbody > tr:last-child b,
+form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td:last-child b {
+    font-size: 12px;
+    color: $gray-dark;
 }
 
 form > table,
@@ -182,7 +188,7 @@ form > table > tbody > tr > td > table {
 form > table > tbody > tr > td > table:first-of-type {
     background: $brand-primary;
     padding: ($padding-base * 2) ($padding-base * 3);
-    width: 100vw !important;
+    width: 100% !important;
     color: #fff;
 
     tr:nth-child(1),
@@ -212,13 +218,13 @@ form > table > tbody > tr > td > table:first-of-type {
 form > table > tbody > tr > td > table:nth-child(0n + 3) {
     background: #fff;
     padding: ($padding-base * 2) ($padding-base * 3);
-    width: 100vw !important;
+    width: 100% !important;
     box-shadow: $content-shadow-bottom;
 }
 
 //left links and table
 form > table > tbody > tr > td > table:nth-child(0n + 4) {
-    width: 100vw !important;
+    width: 100% !important;
     height: calc(100vh - 105px); //MAGIC NUMBER
 
     & > tbody > tr > td {
@@ -264,44 +270,23 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
         &:last-child {
             padding: ($padding-base * 2) ($padding-base * 2) 0;
 
-            & > table:last-child > tbody > tr {
+            & > table:nth-child(0n + 2) > tbody > tr {
                 > td {
                     padding: $padding-base;
                     border-top: 1px solid $gray-light;
 
+                        &:nth-child(0n + 3) {
+                            color: $gray;
+
+                            input {
+                                background: $gray-lighter;
+                                width: 30px;
+                            }
+                        }
+
                         &:first-child div {
                             font-weight: 600;
                             color: $gray-dark;
-                            position: relative;
-
-                            &:hover {
-                                text-decoration: underline;
-                                cursor: pointer;
-
-                                &::after {
-                                    opacity: 1;
-                                    transition: opacity 200ms linear;
-                                }
-                            }
-
-                            &::after {
-                                display: block;
-                                content: "View project details";
-                                text-align: center;
-                                position: absolute;
-                                left: 50%;
-                                width: 130px;
-                                transform: translateX(-50%);
-                                top: -2em;
-                                background: rgba($gray-darker, .85);
-                                padding: $padding-base ($padding-base * 2);
-                                color: #fff;
-                                font-weight: 400;
-                                border-radius: $border-radius;
-                                opacity: 0;
-                                transition: opacity 200ms linear;
-                                pointer-events: none;
-                            }
                         }
                 }
 
@@ -320,6 +305,43 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
     }
 }
 
+.wbs-link {
+    color: $gray-light;
+    margin: 0 $padding-base;
+    position: relative;
+
+    &:hover {
+        color: $gray-dark;
+        cursor: pointer;
+        text-decoration: none;
+        border-bottom: none;
+
+        &::after {
+            opacity: 1;
+            transition: opacity 200ms linear;
+        }
+    }
+
+    &::after {
+        content: attr(data-tooltip-text);
+        display: block;
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        width: 150px;
+        transform: translateX(-50%);
+        top: -2em;
+        background: rgba(49, 57, 66, 0.85);
+        padding: 5px 10px;
+        color: #fff;
+        font-weight: 400;
+        border-radius: 2px;
+        opacity: 0;
+        transition: opacity 200ms linear;
+        pointer-events: none;
+    }
+}
+
 $icon-names: 'history', 'glass', 'frown-o', 'university', 'gavel', 'eye', 'lock', 'list-alt', 'search', 'clock-o';
 $icon-codes: '\f1da', '\f000', '\f119', '\f19c', '\f0e3', '\f06e', '\f023', '\f022', '\f002', '\f017';
 
@@ -333,6 +355,7 @@ $icon-codes: '\f1da', '\f000', '\f119', '\f19c', '\f0e3', '\f06e', '\f023', '\f0
         left: 1em;
         color: $gray;
         font: normal normal normal 14px/1 FontAwesome;
+        font-family: "FontAwesome";
         font-size: inherit;
         text-rendering: auto;
         -webkit-font-smoothing: antialiased;
