--- a/style.scss
+++ b/style.scss
@@ -59,7 +59,6 @@ body {
 
 div.popupdivhidden {
     display: inline-block;
-    float: left;
     font-family: $font-family;
     font-size: $font-size;
     padding: $padding-base;
@@ -108,7 +107,7 @@ a,
 a b {
     color: $link-color;
     text-decoration: none;
-    border-break: none;
+    border-bottom: none;
 
     &:hover {
         color: darken($link-color, 10%);
