Update fallback fonts

--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,7 @@ $content-bg:            #FFF;
 $content-shadow-bottom: 0 2px 2px 0px rgba(0,0,0,.15);
 $content-shadow:        0 2px 2px 0px rgba(0,0,0,.15), 0 -1px 1px 0px rgba(0,0,0,.05);
 $border-radius:         2px;
-$font-family:           "Open Sans";
+$font-family:           "Open Sans", Arial, sans-serif;
 $font-size:             14px;
 $padding-base:          5px;
 
