--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 body {
   background: #EFF3F6;
-  font-family: "Open Sans";
+  font-family: "Open Sans", Arial, sans-serif;
   margin: 0; }
   body > form {
     margin: 0; }
@@ -22,7 +22,7 @@ body {
 
 div.popupdivhidden {
   display: inline-block;
-  font-family: "Open Sans";
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 14px;
   padding: 5px;
   text-align: left; }
