--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   font-style: normal;
   src: url("http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.eot?v=4.3.0");
   src: url("http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.eot?#iefix&v=4.3.0") format("embedded-opentype"), url("http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff2?v=4.3.0") format("woff2"), url("http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff?v=4.3.0") format("woff"), url("http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.ttf?v=4.3.0") format("truetype"), url("http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular") format("svg"); }
+
 * {
   box-sizing: border-box; }
 
@@ -71,12 +72,14 @@ form > table > tbody > tr > td > table:nth-child(3) td > a:hover,
 form > table > tbody > tr > td > table:nth-child(3) td > font > a:hover {
   color: #384149;
   border-bottom: none; }
+
 form > table > tbody > tr > td > table:nth-child(3) td > a font,
 form > table > tbody > tr > td > table:nth-child(3) td > font > a font {
   color: #647483; }
   form > table > tbody > tr > td > table:nth-child(3) td > a font:hover,
   form > table > tbody > tr > td > table:nth-child(3) td > font > a font:hover {
     color: #313942; }
+
 form > table > tbody > tr > td > table:nth-child(3) td > a font {
   font-size: 0; }
   form > table > tbody > tr > td > table:nth-child(3) td > a font::before {
@@ -86,6 +89,7 @@ form > table > tbody > tr > td > table:nth-child(3) td > a font {
     border-right: 1px solid #647483;
     padding-right: 15px;
     margin-right: 5px; }
+
 form > table > tbody > tr > td > table:nth-child(3) td > font > a font {
   font-size: 0; }
   form > table > tbody > tr > td > table:nth-child(3) td > font > a font::before, form > table > tbody > tr > td > table:nth-child(3) td > font > a font::after {
@@ -134,8 +138,10 @@ form > table > tbody > tr > td > table:first-of-type {
   color: #fff;
   font-family: "FontAwesome";
   margin-right: 5px; }
+
 .user-icon.user-rebel::before {
   content: "\f1d0"; }
+
 .user-icon.user-empire::before {
   content: "\f1d1"; }
 
@@ -192,7 +198,8 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
           width: 100%;
           position: relative;
           padding-right: 50px; }
-      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr:first-child td, form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr:nth-child(0n + 2) td {
+      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr:first-child td,
+      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr:nth-child(0n + 2) td {
         padding: 0;
         border-top: 0; }
       form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr:nth-child(0n + 2) td {
@@ -393,5 +400,3 @@ form > table table:last-child > tbody > tr > td:last-child > table:nth-child(0n+
   border-radius: 2px;
   box-shadow: 0 2px 2px 0px rgba(0, 0, 0, 0.15), 0 -1px 1px 0px rgba(0, 0, 0, 0.05);
   padding: 5px; }
-
-/*# sourceMappingURL=style.css.map */
