--- a/style.css
+++ b/style.css
@@ -189,9 +189,10 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
           text-align: left; }
         form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td:nth-child(0n + 3) {
           color: #708293;
-          width: 40px; }
+          width: 50px; }
           form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td:nth-child(0n + 3) input {
-            background: #EFF3F6; }
+            background: #EFF3F6;
+            padding: 5px 8px; }
         form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td:first-child div {
           font-weight: 600;
           color: #647483;
