--- a/style.scss
+++ b/style.scss
@@ -183,6 +183,39 @@ form > table > tbody > tr > td > table:nth-child(3) td {
     }
 }
 
+.last-day-col {
+    position: relative;
+
+    &::before {
+        content: "Last day!";
+        position: absolute;
+        top: -30px;
+        left: 50%;
+        background: #708293;
+        color: #ffffff;
+        font-size: 13px;
+        padding: $padding-base ($padding-base * 2);
+        white-space: nowrap;
+        border-radius: 2px;
+        transform: translateX(-50%);
+    }
+
+    &::after {
+        top: -3px;
+        left: 50%;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+        border-color: rgba(112, 130, 147, 0);
+        border-top-color: #708293;
+        border-width: 6px;
+        margin-left: -6px;
+    }
+}
+
 form > table table:last-child > tbody > tr > td:last-child > table {
     margin: 10px 0;
 
@@ -291,6 +324,15 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
                 border-left: 2px solid transparent;
                 position: relative;
                 white-space: nowrap;
+
+                &.last-day-submit {
+                    background: darken($gray-darker, 5%);
+
+                    &,
+                    &::before {
+                        color: lighten($gray, 30%);
+                    }
+                }
 
                 &:hover {
                     color: $gray-lighter;
