Fix spacing on the footer

--- a/style.css
+++ b/style.css
@@ -222,6 +222,8 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
             color: #EFF3F6; }
     form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child {
       padding: 10px 10px 0; }
+      form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > br {
+        display: none; }
       form > table > tbody > tr > td > table:nth-child(0n + 4) > tbody > tr > td:last-child > table:nth-child(0n + 2) > tbody > tr > td {
         padding: 5px;
         border-top: 1px solid #DCE1E5; }
