--- a/style.scss
+++ b/style.scss
@@ -339,14 +339,13 @@ form > table > tbody > tr > td > table:nth-child(0n + 4) {
                 position: relative;
                 white-space: nowrap;
 
-                &.last-day-submit::after {
-                    content: "GET PAID!";
+                & .last-day-submit {
                     font-size: 11px;
                     background: $brand-success;
                     color: #FFF;
                     padding: ($padding-base * .8) ($padding-base * 1.2);
                     border-radius: $padding-base * 2;
-                    margin: 0 ($padding-base * -4) 0 ($padding-base * 3);
+                    margin: 0 ($padding-base * -3) 0 ($padding-base * 2);
                 }
 
                 &:hover {
