Adding active row highlight
It would be nice to have an easy way to quickly see which charge code you're looking at later in the week if you have a ton of charge codes.

Added a hover effect to highlight your current row.  I'm sure you can get this looking a little slicker, but here's an idea to start with.

--- a/style.css
+++ b/style.css
@@ -2657,6 +2657,10 @@ table[bgcolor="bfbfbf"],
 tr[bgcolor="bfbfbf"],
 form > table table:last-child > tbody > tr > td:last-child > table:nth-child(0n+2) {
   background: #FFF; }
+  
+tr[bgcolor="bfbfbf"]:hover {
+  background: rgb(25, 157, 220)
+}
 
 table[bgcolor="bfbfbf"],
 form > table table:last-child > tbody > tr > td:last-child > table:nth-child(0n+2) {
